2004-10-26  Vincent Noel  <vnoel@cox.net>

	* Makefile.am: remove the menus.c file which was not used anywhere.
	* logview.h: remove the AddMenu prototype.

2004-10-25  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_set_window_title): Extract the window naming
	code in its own function.

	* logview-search.c (logview_tree_model_search_iter_foreach):
	Correct display problem at startup.

	* logview.c (CreateMainWin): Use gtk_ui_manager.

	* logview-search-dialog.h: 
	* logview-search-dialog.c: 
	* logview-search.h: 
	* logview-search.c: 
	* gedit-output-window.h: 
	* gedit-output-window.c: New files for gedit-like search.

	* logview.c: Add an "Edit" menu, with a "Find" entry.
	(logview_search, logview_close_output_window)
	(logview_output_window_changed): New functions for gedit-like search.

2004-10-21  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): extract the sensitivity
	logic for menus. Other code clean-ups.

2004-10-20  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (UpdateStatusArea): Use status bar.
	(CreateMainWin): Use a regular statusbar instead of a box+label.

	* logview.c (CreateMainWin): Remove extra border in the main window.

2004-10-18  Fernando Herrera  <fherrera@onirica.com>

	* logview.c: (SaveUserPrefs): Use /apps/gnome-system-log/logfile 
	key when saving prefererences (that is what is read on startup)

2004-08-11  Glynn Foster  <glynn.foster@sun.com>

	* about.c: (AboutShowWindow): Should be 'translator-credits'.

2004-08-03  Glynn Foster  <glynn.foster@sun.com>

	* doc/C/logview.sgml, pixmaps/.cvsignore: Remove, old.

2004-07-19  Shakti Sen  <shprasad@novell.com>

	* monitor.c (mon_read_last_page):
	Fixes the crash if log messages is having less
	than 5 lines.  Fixes bug #145180

2004-07-19  Shakti Sen  <shprasad@novell.com>

	*monitor.c (monitor_window_destroyed_cb):
	Remove the timer to fix the crash.
	Fixes bug #145120

2004-07-19  Glynn Foster  <glynn.foster@sun.com>
