@@ -2,6 +2,7 @@
 
 	* Makefile.am: remove the menus.c file which was not used anywhere.
 	* logview.h: remove the AddMenu prototype.
+	Remove obsolete comments and useless define.
 
 2004-10-25  Vincent Noel  <vnoel@cox.net>
 
